--- a/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
+++ b/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
@@ -5,104 +5,110 @@
     android:layout_height="match_parent"
     android:background="?attr/paper_color">
 
-    <LinearLayout
-        android:id="@+id/contentContainer"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/paper_color"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/contentContainer"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:gravity="center_vertical"
+            android:layout_height="match_parent"
+            android:background="?attr/paper_color"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/contributionsCountText"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:lineSpacingExtra="8sp"
-                android:textColor="?attr/primary_text_color"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:layout_height="100dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/contributionsSeenText"
+                <TextView
+                    android:id="@+id/contributionsCountText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:lineSpacingExtra="8sp"
+                    android:textColor="?attr/primary_text_color"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/contributionsSeenText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:lineSpacingExtra="8sp"
+                    android:textColor="?attr/secondary_text_color"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <org.wikipedia.suggestededits.SuggestedEditsTypeItem
+                    android:id="@+id/allTypesView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_weight="0.5" />
+
+                <org.wikipedia.suggestededits.SuggestedEditsTypeItem
+                    android:id="@+id/articleDescriptionView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_weight="0.5" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <org.wikipedia.suggestededits.SuggestedEditsTypeItem
+                    android:id="@+id/imageCaptionsView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_weight="0.5" />
+
+                <org.wikipedia.suggestededits.SuggestedEditsTypeItem
+                    android:id="@+id/imageTagsView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_weight="0.5" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contributionsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:paddingBottom="16dp"
+                android:scrollbars="vertical" />
+
+            <ProgressBar
+                android:id="@+id/loadMoreProgressView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:lineSpacingExtra="8sp"
-                android:textColor="?attr/secondary_text_color"
-                android:textSize="16sp"
-                android:textStyle="normal" />
+                android:layout_gravity="center"
+                android:visibility="gone" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <org.wikipedia.suggestededits.SuggestedEditsTypeItem
-                android:id="@+id/allTypesView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:layout_weight="0.5" />
-
-            <org.wikipedia.suggestededits.SuggestedEditsTypeItem
-                android:id="@+id/articleDescriptionView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_weight="0.5" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <org.wikipedia.suggestededits.SuggestedEditsTypeItem
-                android:id="@+id/imageCaptionsView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_weight="0.5" />
-
-            <org.wikipedia.suggestededits.SuggestedEditsTypeItem
-                android:id="@+id/imageTagsView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_weight="0.5" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contributionsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:paddingBottom="16dp"
-            android:scrollbars="vertical" />
-
-        <ProgressBar
-            android:id="@+id/loadMoreProgressView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <org.wikipedia.views.WikiErrorView
         android:id="@+id/errorView"
