--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,33 +20,66 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_main_nav_tab_container"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="bottom"
-        android:background="?attr/nav_tab_background_color"
-        android:elevation="6dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <org.wikipedia.navtab.NavTabLayout
-            android:id="@+id/fragment_main_nav_tab_layout"
-            android:layout_width="match_parent"
+        <FrameLayout
+            android:id="@+id/fragment_main_nav_tab_container"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="?attr/nav_tab_background_color"
+            android:elevation="6dp">
+
+            <org.wikipedia.navtab.NavTabLayout
+                android:id="@+id/fragment_main_nav_tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/nav_tab_background_color"
+                app:itemIconTint="?attr/nav_tab_item_color_state"
+                app:itemTextAppearanceActive="@style/BottomNavigationTextAppearanceActive"
+                app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearanceInactive"
+                app:itemTextColor="?attr/nav_tab_item_color_state"
+                app:labelVisibilityMode="labeled"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@android:color/transparent" />
+
+            <org.wikipedia.navtab.NavTabOverlayLayout
+                android:id="@+id/fragment_main_nav_tab_overlay_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="8dp" />
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/menu_layout"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:background="?attr/nav_tab_background_color"
-            app:itemIconTint="?attr/nav_tab_item_color_state"
-            app:itemTextColor="?attr/nav_tab_item_color_state"
-            app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearanceInactive"
-            app:itemTextAppearanceActive="@style/BottomNavigationTextAppearanceActive"
-            app:tabGravity="fill"
-            app:labelVisibilityMode="labeled"
-            app:tabIndicatorColor="@android:color/transparent" />
+            android:elevation="6dp"
+            android:orientation="vertical">
 
-        <org.wikipedia.navtab.NavTabOverlayLayout
-            android:id="@+id/fragment_main_nav_tab_overlay_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="8dp"/>
+            <ImageView
+                android:id="@+id/menu_icon"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="@null"
+                android:paddingTop="10dp"
+                android:tint="?attr/nav_tab_item_color_state"
+                app:srcCompat="@drawable/ic_menu_themed_24dp" />
 
-    </FrameLayout>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="2dp"
+                android:text="@string/nav_item_more"
+                android:textColor="?attr/nav_tab_item_color_state"
+                android:textSize="10sp" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
