--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -38,6 +38,49 @@
                     android:layout_gravity="center"
                     android:visibility="gone" />
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/encourageAccountCreationView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_require_login_header"
+                            android:contentDescription="@null" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:fontFamily="sans-serif"
+                            android:textStyle="bold"
+                            android:textColor="?attr/material_theme_primary_color"
+                            android:lineSpacingExtra="8sp"
+                            android:text="@string/suggested_edits_encourage_account_creation_card_title"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:fontFamily="sans-serif"
+                            android:textColor="?attr/material_theme_secondary_color"
+                            android:lineSpacingExtra="8sp"
+                            android:text="@string/suggested_edits_encourage_account_creation_card_content" />
+
+                        <Button
+                            android:id="@+id/loginButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/suggested_edits_encourage_account_creation_card_login_button" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
                 <LinearLayout
                     android:id="@+id/tasksContainer"
                     android:layout_width="match_parent"
