--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,9 +22,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginEnd="12dp"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <FrameLayout
             android:id="@+id/fragment_main_nav_tab_container"
@@ -57,11 +56,12 @@
         </FrameLayout>
 
         <LinearLayout
-            android:id="@+id/menu_layout"
-            android:layout_width="60dp"
+            android:id="@+id/nav_more_container"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             android:background="?attr/nav_tab_background_color"
             android:elevation="6dp"
+            android:foreground="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
