--- a/app/src/main/res/layout/view_contributions_header.xml
+++ b/app/src/main/res/layout/view_contributions_header.xml
@@ -7,9 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
