--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -43,18 +43,19 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="?attr/material_theme_primary_color"
-            android:textSize="16sp"
+            android:lineSpacingExtra="6sp"
+            android:textColor="?attr/primary_text_color"
             android:textStyle="bold" />
 
         <org.wikipedia.views.GoneIfEmptyTextView
             android:id="@+id/description"
-            style="@style/MaterialListTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:paddingEnd="8dp"
+            android:lineSpacingExtra="6sp"
+            android:textColor="?attr/primary_text_color"
             tools:text="Lorem ipsum" />
 
         <LinearLayout
