--- a/app/src/main/res/layout/item_suggested_edits_type.xml
+++ b/app/src/main/res/layout/item_suggested_edits_type.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_width="match_parent"
+    tools:layout_height="wrap_content"
+    tools:parentTag="android.widget.LinearLayout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:gravity="center_vertical">
+        android:layout_marginStart="12dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="12sp" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="12dp"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@null"
+        android:tint="?attr/colorAccent" />
 
-        <ImageButton
-            android:id="@+id/image"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="12dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@null"
-            android:tint="?attr/colorAccent" />
-    </LinearLayout>
 </merge>
