--- a/app/src/main/res/layout/view_contributions_header.xml
+++ b/app/src/main/res/layout/view_contributions_header.xml
@@ -27,6 +27,7 @@
             android:id="@+id/contributionsSeenText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:lineSpacingExtra="8sp"
             android:textColor="?attr/secondary_text_color"
             android:textSize="16sp"
