--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -44,14 +44,14 @@
             android:fontFamily="sans-serif"
             android:textColor="?attr/material_theme_secondary_color"
             android:lineSpacingExtra="8sp"
-            android:text="@string/suggested_edits_encourage_account_creation_message"
             android:layout_marginBottom="4dp"/>
 
         <Button
             android:id="@+id/actionButton"
             style="@style/FlatButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_open_in_new_black_24px"/>
 
     </LinearLayout>
 
