--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_open_in_new_black_24px"
-            app:iconTint="@color/accent50"/>
+            app:iconTint="?attr/colorAccent"/>
 
     </LinearLayout>
 
