--- a/app/src/main/res/layout/view_contributions_header.xml
+++ b/app/src/main/res/layout/view_contributions_header.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:layout_width="match_parent"
+    tools:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,4 +79,4 @@
             android:layout_weight="0.5" />
     </LinearLayout>
 
-</LinearLayout>
+</merge>
