--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:background="?attr/paper_color"
             android:elevation="4dp"
             android:layout_marginStart="-12dp"
+            app:titleTextAppearance="@style/LargeTextToolbarTitleText"
             app:titleTextColor="?attr/toolbar_title_color"
             app:titleMarginStart="28dp">
 
